# ps_store_tracker

./: Dockerfile  LICENSE  README.md  config.json  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  errors.py  logging.py
app/parser/: client.py  common.py  parser.py  products.py  service.py
app/parser/models/: product.py  ps_plus.py
tests/: test_config.py  test_parser.py  test_product_parser.py
