[project]
name = "ps_store_tracker"
version = "0.1.0"
description = "Async PlayStation Store price tracker"

authors = [
    { name = "Logvin Timothy", email = "koalko99@gmail.com" }
]

requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "aiohttp>=3.12.0",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.14.1",
    "pydantic>=2.11.0",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/Koalko99/ps_store_tracker"
Repository = "https://github.com/Koalko99/ps_store_tracker"

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"
